Clean up LeaderboardSchedule

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -99,15 +99,6 @@ MaxBackupNumber=5
 BackupIntervalMinutes=15
 PlayerName=Player
 
-[Leaderboards]
-;                FileName: Name of the SQLite database file to use relative to the server's Data/Leaderboards directory.
-;			   JsonConfig: Name of the JSON config file to use relative to the server's Data/Leaderboards directory
-; AutoSaveIntervalMinutes: The minimum interval in minutes between autosave to database.
-
-FileName=Leaderboards.db
-JsonConfig=LeaderboardsConfig.json
-AutoSaveIntervalMinutes=5
-
 [GroupingManager]
 ;    MotdPlayerName: Sender name for the server's message of the day (MotD).
 ;          MotdText: Message of the day text.
@@ -225,3 +216,12 @@ StoreBoostsBannerPageUrl=http://localhost/store/images/banner.png
 StoreChestsBannerPageUrl=http://localhost/store/images/banner.png
 StoreSpecialsBannerPageUrl=http://localhost/store/images/banner.png
 StoreRealMoneyUrl=http://localhost/store/gs-bundles.html
+
+[Leaderboards]
+;            DatabaseFile: Name of the SQLite database file to use relative to the server's Data/Leaderboards directory.
+;            ScheduleFile: Name of the JSON schedule file to use relative to the server's Data/Leaderboards directory
+; AutoSaveIntervalMinutes: The minimum interval in minutes between autosave to database.
+
+DatabaseFile=Leaderboards.db
+ScheduleFile=LeaderboardSchedule.json
+AutoSaveIntervalMinutes=5
