Optimize LeaderboardEntry saving

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -220,8 +220,8 @@ StoreRealMoneyUrl=http://localhost/store/gs-bundles.html
 [Leaderboards]
 ;            DatabaseFile: Name of the SQLite database file to use relative to the server's Data/Leaderboards directory.
 ;            ScheduleFile: Name of the JSON schedule file to use relative to the server's Data/Leaderboards directory
-; AutoSaveIntervalMinutes: The minimum interval in minutes between autosave to database.
+; AutoSaveIntervalMinutes: The minimum interval in minutes between leaderboard entry autosaves to the database.
 
 DatabaseFile=Leaderboards.db
 ScheduleFile=LeaderboardSchedule.json
-AutoSaveIntervalMinutes=5
+AutoSaveIntervalMinutes=10
