Add Eternity Splinter cooldown override to Config

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -164,6 +164,7 @@ IsDifficultySliderEnabled=true
 OrbisTrophiesEnabled=true
 
 [CustomGameOptions]
+;           ESCooldownOverrideMinutes: Overrides the default Eternity Splinter drop cooldown duration when the value is >= 0.
 ;                   AutoUnlockAvatars: Automatically unlocks all avatars for players who have finished the tutorial.
 ;                   AutoUnlockTeamUps: Automatically unlocks all team-ups for players who have finished the tutorial.
 ;             RegionCleanupIntervalMS: Interval between region cleanups in milliseconds.
@@ -177,6 +178,7 @@ OrbisTrophiesEnabled=true
 ;             DisableCharacterBinding: Disables character binding on equip for items.
 ;                UsePrestigeLootTable: Replaces starting costume prestige rewards with the loot table specified in game data.
 
+ESCooldownOverrideMinutes=-1.0
 AutoUnlockAvatars=true
 AutoUnlockTeamUps=true
 RegionCleanupIntervalMS=300000
