Implement CombineESStacks config setting

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -165,6 +165,7 @@ OrbisTrophiesEnabled=true
 
 [CustomGameOptions]
 ;           ESCooldownOverrideMinutes: Overrides the default Eternity Splinter drop cooldown duration when the value is >= 0.
+;                     CombineESStacks: Combine multiple Eternity Splinter stacks into a single item when they drop at the same time.
 ;                   AutoUnlockAvatars: Automatically unlocks all avatars for players who have finished the tutorial.
 ;                   AutoUnlockTeamUps: Automatically unlocks all team-ups for players who have finished the tutorial.
 ;             RegionCleanupIntervalMS: Interval between region cleanups in milliseconds.
@@ -179,6 +180,7 @@ OrbisTrophiesEnabled=true
 ;                UsePrestigeLootTable: Replaces starting costume prestige rewards with the loot table specified in game data.
 
 ESCooldownOverrideMinutes=-1.0
+CombineESStacks=false
 AutoUnlockAvatars=true
 AutoUnlockTeamUps=true
 RegionCleanupIntervalMS=300000
