--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -59,23 +59,20 @@ EnableWebApi=true
 ;           UseJsonDBManager: Switches to JSON-based backend for saving player data.
 ;                             NOTE: JSON backend supports only a single account / user.
 ; AllowClientVersionMismatch: Allows clients that do not match the server's version of the game to connect.
-;              SimulateQueue: Simulates putting clients into a queue instead of logging them in normally (for testing only).
-;           QueuePlaceInLine: Place in line to show when SimulateQueue is enabled.
-; QueueNumberOfPlayersInLine: Number of players to show when SimulateQueue is enabled.
 ;            ShowNewsOnLogin: Requests the client to open the news windows after logging in.
 ;                    NewsUrl: News URL for the client's news window.
 ;          GameInstanceCount: The number of game instances to create and maintain. This is a temporary setting that will be removed in the future.
 ;         PlayerCountDivisor: The size of a player count chunk used for load balancing game instances.
+;             ServerCapacity: Indicates the maximum concurrent number of players allowed on the server. Players who exceed this capacity will be put in a queue.
+;                             Values <= 0 indicate unlimited capacity.
 
 UseJsonDBManager=false
 AllowClientVersionMismatch=false
-SimulateQueue=false
-QueuePlaceInLine=2023
-QueueNumberOfPlayersInLine=9001
 ShowNewsOnLogin=false
 NewsUrl=http://localhost/news
 GameInstanceCount=1
 PlayerCountDivisor=50
+ServerCapacity=0
 
 [SQLiteDBManager]
 ;              FileName: Name of the SQLite database file to use relative to the server's Data directory.
