Implement whitelist mode

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -59,6 +59,7 @@ EnableWebApi=true
 ;           UseJsonDBManager: Switches to JSON-based backend for saving player data.
 ;                             NOTE: JSON backend supports only a single account / user.
 ; AllowClientVersionMismatch: Allows clients that do not match the server's version of the game to connect.
+;               UseWhitelist: When enabled, only clients added to the whitelist via the !account whitelist command are allowed to log in.
 ;            ShowNewsOnLogin: Requests the client to open the news windows after logging in.
 ;                    NewsUrl: News URL for the client's news window.
 ;          GameInstanceCount: The number of game instances to create and maintain. This is a temporary setting that will be removed in the future.
@@ -68,6 +69,7 @@ EnableWebApi=true
 
 UseJsonDBManager=false
 AllowClientVersionMismatch=false
+UseWhitelist=false
 ShowNewsOnLogin=false
 NewsUrl=http://localhost/news
 GameInstanceCount=1
