Implement login queue client cap

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -66,6 +66,7 @@ EnableWebApi=true
 ;         PlayerCountDivisor: The size of a player count chunk used for load balancing game instances.
 ;             ServerCapacity: Indicates the maximum concurrent number of players allowed on the server. Players who exceed this capacity will be put in a queue.
 ;                             Values <= 0 indicate unlimited capacity.
+;       MaxLoginQueueClients: The maximum number of normal priority clients that can be put into the login queue at the same time.
 
 UseJsonDBManager=false
 AllowClientVersionMismatch=false
@@ -75,6 +76,7 @@ NewsUrl=http://localhost/news
 GameInstanceCount=1
 PlayerCountDivisor=50
 ServerCapacity=0
+MaxLoginQueueClients=10000
 
 [SQLiteDBManager]
 ;              FileName: Name of the SQLite database file to use relative to the server's Data directory.
