Overhaul game instance threading

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -110,6 +110,11 @@ MotdPlayerName=MHServerEmu
 MotdText=Welcome back to Marvel Heroes! Type !commands to see a list of available commands. Type !tower to return to Avengers Tower.
 MotdPrestigeLevel=6
 
+[GameInstance]
+; NumWorkerThreads: The number of worker threads used to process game instances.
+;                   This number ideally should not exceed the number of logical CPUs the machine running the server has.
+NumWorkerThreads=1
+
 [GameData]
 ;          LoadAllPrototypes: Preloads all prototypes on server start. Makes server start slower, but removes lag spikes during the game when data is loaded for the first time.
 ; UseEquipmentSlotTableCache: Enables caching for the EquipmentSlotTable. Makes server start slower if not used with LoadAllPrototypes.
