Add EnablePersistence config setting

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -56,6 +56,7 @@ Port=8080
 EnableWebApi=true
 
 [PlayerManager]
+;          EnablePersistence: Allows player data to be saved.
 ;           UseJsonDBManager: Switches to JSON-based backend for saving player data.
 ;                             NOTE: JSON backend supports only a single account / user.
 ; AllowClientVersionMismatch: Allows clients that do not match the server's version of the game to connect.
@@ -66,6 +67,7 @@ EnableWebApi=true
 ;                             Values <= 0 indicate unlimited capacity.
 ;       MaxLoginQueueClients: The maximum number of normal priority clients that can be put into the login queue at the same time.
 
+EnablePersistence=true
 UseJsonDBManager=false
 AllowClientVersionMismatch=false
 UseWhitelist=false
