Enable WAL mode for SQLite and remove StartTargetRegionOverride

--- a/src/MHServerEmu.DatabaseAccess/MHServerEmu.DatabaseAccess.csproj
+++ b/src/MHServerEmu.DatabaseAccess/MHServerEmu.DatabaseAccess.csproj
@@ -42,6 +42,9 @@
     <None Update="Data\SQLite\Migrations\2.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Data\SQLite\Migrations\3.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup Condition="$([MSBuild]::IsOSPlatform('Windows'))">
