Refactor MOTD sending

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -99,14 +99,16 @@ BackupIntervalMinutes=15
 PlayerName=Player
 
 [GroupingManager]
-;    MotdPlayerName: Sender name for the server's message of the day (MotD).
-;          MotdText: Message of the day text.
-; MotdPrestigeLevel: Determines the color of the MotD's sender name).
-;                    0 - white, 1 - green, 2 - blue, 3 - purple, 4 - orange, 5 - red, 6 - yellow (cosmic).
+;          ServerName: Name in chat for system messages sent by the server.
+; ServerPrestigeLevel: Determines the color of the server's name in system messages.
+;                      0 - white, 1 - green, 2 - blue, 3 - purple, 4 - orange, 5 - red, 6 - yellow (cosmic).
+;            MotdText: Message of the day text.
+;            LogTells: When enabled, the text of tell (private) messages is included in server logs.
 
-MotdPlayerName=MHServerEmu
-MotdText=Welcome back to Marvel Heroes! Type !commands to see a list of available commands. Type !tower to return to Avengers Tower.
-MotdPrestigeLevel=6
+ServerName=MHServerEmu
+ServerPrestigeLevel=6
+MotdText=Welcome back to Marvel Heroes! Type !commands to see a list of available server commands. Use the !store convertes command to convert Eternity Splinters to Gs.
+LogTells=false
 
 [GameInstance]
 ; NumWorkerThreads: The number of worker threads used to process game instances.
