Off Party Achievements

--- a/src/MHServerEmu.Games/MHServerEmu.Games.csproj
+++ b/src/MHServerEmu.Games/MHServerEmu.Games.csproj
@@ -43,7 +43,7 @@
     <None Update="Data\Game\Achievements\AchievementInfoMap.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Data\Game\Achievements\AchievementInfoMapParty.json">
+    <None Update="Data\Game\Achievements\Off\AchievementInfoMapParty.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Data\Game\Achievements\AchievementNewThresholdUS.txt">
