Implement a web dashboard endpoint

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -47,13 +47,15 @@ ReceiveTimeoutMS=60000
 SendTimeoutMS=6000
 
 [Auth]
-;      Address: Address for the auth server to listen on.
-;         Port: Port for the auth server to listen on.
-; EnableWebApi: Enables custom web API endpoints.
+;         Address: Address for the auth server to listen on.
+;            Port: Port for the auth server to listen on.
+;    EnableWebApi: Enables custom web API endpoints.
+; EnableDashboard: Enables a web dashboard accessible at the /Dashboard endpoint. Requires the web API to be enabled.
 
 Address=localhost
 Port=8080
 EnableWebApi=true
+EnableDashboard=true
 
 [PlayerManager]
 ;          EnablePersistence: Allows player data to be saved.
