Implement multi-file dashboard serving

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -47,15 +47,19 @@ ReceiveTimeoutMS=60000
 SendTimeoutMS=6000
 
 [Auth]
-;         Address: Address for the auth server to listen on.
-;            Port: Port for the auth server to listen on.
-;    EnableWebApi: Enables custom web API endpoints.
-; EnableDashboard: Enables a web dashboard accessible at the /Dashboard endpoint. Requires the web API to be enabled.
+;                 Address: Address for the auth server to listen on.
+;                    Port: Port for the auth server to listen on.
+;            EnableWebApi: Enables custom web API endpoints.
+;         EnableDashboard: Enables a server dashboard accessible from the web API. Requires the web API to be enabled.
+;  DashboardFileDirectory: Name of the directory that contains dashboard files. The directory should be placed in Data\Web.
+;   DashboardUrlDirectory: Name of the directory from which dashboard files will be served to web browsers.
 
 Address=localhost
 Port=8080
 EnableWebApi=true
 EnableDashboard=true
+DashboardFileDirectory=Dashboard
+DashboardUrlDirectory=/
 
 [PlayerManager]
 ;          EnablePersistence: Allows player data to be saved.
