--- a/src/MHServerEmu.Auth/MHServerEmu.Auth.csproj
+++ b/src/MHServerEmu.Auth/MHServerEmu.Auth.csproj
@@ -28,6 +28,12 @@
     <None Update="Data\Web\Dashboard\index.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Data\Web\Dashboard\script.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\Web\Dashboard\style.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Data\Web\Response.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
