--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -46,9 +46,9 @@ PublicAddress=127.0.0.1
 ReceiveTimeoutMS=60000
 SendTimeoutMS=6000
 
-[Auth]
-;                 Address: Address for the auth server to listen on.
-;                    Port: Port for the auth server to listen on.
+[WebFrontend]
+;                 Address: Address for the web frontend to listen on.
+;                    Port: Port for the web frontend to listen on.
 ;            EnableWebApi: Enables custom web API endpoints.
 ;         EnableDashboard: Enables a server dashboard accessible from the web API. Requires the web API to be enabled.
 ;  DashboardFileDirectory: Name of the directory that contains dashboard files. The directory should be placed in Data\Web.
