Implement login rate limiting

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -49,6 +49,9 @@ SendTimeoutMS=6000
 [WebFrontend]
 ;                 Address: Address for the web frontend to listen on.
 ;                    Port: Port for the web frontend to listen on.
+;    EnableLoginRateLimit: Enables rate limiting for login attempts.
+;    LoginRateLimitCostMS: Time cost in milliseconds for a single login attempt.
+;     LoginRateLimitBurst: The number of times in a row the time cost can be paid before the limit starts applying. Must be >= 2.
 ;            EnableWebApi: Enables custom web API endpoints.
 ;         EnableDashboard: Enables a server dashboard accessible from the web API. Requires the web API to be enabled.
 ;  DashboardFileDirectory: Name of the directory that contains dashboard files. The directory should be placed in Data\Web.
@@ -56,6 +59,9 @@ SendTimeoutMS=6000
 
 Address=localhost
 Port=8080
+EnableLoginRateLimit=false
+LoginRateLimitCostMS=30000
+LoginRateLimitBurst=10
 EnableWebApi=true
 EnableDashboard=true
 DashboardFileDirectory=Dashboard
