--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -55,7 +55,7 @@ SendTimeoutMS=6000
 ;            EnableWebApi: Enables custom web API endpoints.
 ;         EnableDashboard: Enables a server dashboard accessible from the web API. Requires the web API to be enabled.
 ;  DashboardFileDirectory: Name of the directory that contains dashboard files. The directory should be placed in Data\Web.
-;   DashboardUrlDirectory: Name of the directory from which dashboard files will be served to web browsers.
+;        DashboardUrlPath: URL path relative to the origin from which the dashboard is served.
 
 Address=localhost
 Port=8080
@@ -65,7 +65,7 @@ LoginRateLimitBurst=10
 EnableWebApi=true
 EnableDashboard=true
 DashboardFileDirectory=Dashboard
-DashboardUrlDirectory=/
+DashboardUrlPath=/
 
 [PlayerManager]
 ;          EnablePersistence: Allows player data to be saved.
