--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -208,7 +208,7 @@ DisableAccountBinding=false
 DisableCharacterBinding=false
 UsePrestigeLootTable=false
 
-[Billing]
+[MTXStore]
 ; GazillioniteBalanceForNewAccounts: The amount of Gs new accounts will get when they log in for the first time.
 ;   ESToGazillioniteConversionRatio: The amount of Gs players will get for each Eternity Splinter when converting them.
 ;                 ApplyCatalogPatch: Loads CatalogPatch.json and merges its content with data loaded from Catalog.json.
