MTXStore: Implement ES conversion step configuration

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -211,6 +211,7 @@ UsePrestigeLootTable=false
 [MTXStore]
 ; GazillioniteBalanceForNewAccounts: The amount of Gs new accounts will get when they log in for the first time.
 ;   ESToGazillioniteConversionRatio: The amount of Gs players will get for each Eternity Splinter when converting them.
+;    ESToGazillioniteConversionStep: Step for the Eternity Splinter amount when converting to G. Used to avoid rounding errors.
 ;                 ApplyCatalogPatch: Loads CatalogPatch.json and merges its content with data loaded from Catalog.json.
 ;                 OverrideStoreUrls: Enables custom in-game store URL overrides assigned below.
 ;                  StoreHomePageUrl: URL for the page displayed on the Home tab.
@@ -224,6 +225,7 @@ UsePrestigeLootTable=false
 
 GazillioniteBalanceForNewAccounts=10000
 ESToGazillioniteConversionRatio=2.25
+ESToGazillioniteConversionStep=4
 ApplyCatalogPatch=true
 OverrideStoreUrls=true
 StoreHomePageUrl=http://localhost/store
