MTXStore: Separate catalog metadata from entry data

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -119,7 +119,7 @@ PlayerName=Player
 
 ServerName=MHServerEmu
 ServerPrestigeLevel=6
-MotdText=Welcome back to Marvel Heroes! Type !commands to see a list of available server commands. Use the !store convertes command to convert Eternity Splinters to Gs.
+MotdText=Welcome back to Marvel Heroes! Type !commands to see a list of available server commands.
 LogTells=false
 
 [GameInstance]
@@ -212,8 +212,6 @@ UsePrestigeLootTable=false
 ; GazillioniteBalanceForNewAccounts: The amount of Gs new accounts will get when they log in for the first time.
 ;   ESToGazillioniteConversionRatio: The amount of Gs players will get for each Eternity Splinter when converting them.
 ;    ESToGazillioniteConversionStep: Step for the Eternity Splinter amount when converting to G. Used to avoid rounding errors.
-;                 ApplyCatalogPatch: Loads CatalogPatch.json and merges its content with data loaded from Catalog.json.
-;                 OverrideStoreUrls: Enables custom in-game store URL overrides assigned below.
 ;                  StoreHomePageUrl: URL for the page displayed on the Home tab.
 ;            StoreHomeBannerPageUrl: URL for the top banner displayed when the Home tab is selected.
 ;          StoreHeroesBannerPageUrl: URL for the top banner displayed when the Heroes tab is selected.
@@ -226,16 +224,14 @@ UsePrestigeLootTable=false
 GazillioniteBalanceForNewAccounts=10000
 ESToGazillioniteConversionRatio=2.25
 ESToGazillioniteConversionStep=4
-ApplyCatalogPatch=true
-OverrideStoreUrls=true
-StoreHomePageUrl=http://localhost/store
-StoreHomeBannerPageUrl=http://localhost/store/images/banner.png
-StoreHeroesBannerPageUrl=http://localhost/store/images/banner.png
-StoreCostumesBannerPageUrl=http://localhost/store/images/banner.png
-StoreBoostsBannerPageUrl=http://localhost/store/images/banner.png
-StoreChestsBannerPageUrl=http://localhost/store/images/banner.png
-StoreSpecialsBannerPageUrl=http://localhost/store/images/banner.png
-StoreRealMoneyUrl=http://localhost/store/gs-bundles.html
+HomePageUrl=http://localhost/store
+HomeBannerPageUrl=http://localhost/store/images/banner.png
+HeroesBannerPageUrl=http://localhost/store/images/banner.png
+CostumesBannerPageUrl=http://localhost/store/images/banner.png
+BoostsBannerPageUrl=http://localhost/store/images/banner.png
+ChestsBannerPageUrl=http://localhost/store/images/banner.png
+SpecialsBannerPageUrl=http://localhost/store/images/banner.png
+RealMoneyUrl=https://localhost/MTXStore/AddG
 
 [Leaderboards]
 ;            DatabaseFile: Name of the SQLite database file to use relative to the server's Data/Leaderboards directory.
