MTXStore: Implement bundle URL rewriting

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -212,14 +212,17 @@ UsePrestigeLootTable=false
 ; GazillioniteBalanceForNewAccounts: The amount of Gs new accounts will get when they log in for the first time.
 ;   ESToGazillioniteConversionRatio: The amount of Gs players will get for each Eternity Splinter when converting them.
 ;    ESToGazillioniteConversionStep: Step for the Eternity Splinter amount when converting to G. Used to avoid rounding errors.
-;                  StoreHomePageUrl: URL for the page displayed on the Home tab.
-;            StoreHomeBannerPageUrl: URL for the top banner displayed when the Home tab is selected.
-;          StoreHeroesBannerPageUrl: URL for the top banner displayed when the Heroes tab is selected.
-;        StoreCostumesBannerPageUrl: URL for the top banner displayed when the Costumes tab is selected.
-;          StoreBoostsBannerPageUrl: URL for the top banner displayed when the Items tab is selected.
-;          StoreChestsBannerPageUrl: URL for the top banner displayed when the Cards tab is selected.
-;        StoreSpecialsBannerPageUrl: URL for the top banner displayed when the Specials tab is selected.
-;                 StoreRealMoneyUrl: URL for the page displayed in the add G window.
+;                       HomePageUrl: URL for the page displayed on the Home tab.
+;                 HomeBannerPageUrl: URL for the top banner displayed when the Home tab is selected.
+;               HeroesBannerPageUrl: URL for the top banner displayed when the Heroes tab is selected.
+;             CostumesBannerPageUrl: URL for the top banner displayed when the Costumes tab is selected.
+;               BoostsBannerPageUrl: URL for the top banner displayed when the Items tab is selected.
+;               ChestsBannerPageUrl: URL for the top banner displayed when the Cards tab is selected.
+;             SpecialsBannerPageUrl: URL for the top banner displayed when the Specials tab is selected.
+;                      RealMoneyUrl: URL for the page displayed in the add G window.
+;         RewriteOriginalBundleUrls: When enabled, rewrites original bundle URLs pointing to the Gazillion CDN with new prefixes.
+;                     BundleInfoUrl: URL used to rewrite Gazillion bundle info URLs (if enabled).
+;                    BundleImageUrl: URL used to rewrite Gazillion bundle image URLs (if enabled).
 
 GazillioniteBalanceForNewAccounts=10000
 ESToGazillioniteConversionRatio=2.25
@@ -232,6 +235,9 @@ BoostsBannerPageUrl=http://localhost/store/images/banner.png
 ChestsBannerPageUrl=http://localhost/store/images/banner.png
 SpecialsBannerPageUrl=http://localhost/store/images/banner.png
 RealMoneyUrl=https://localhost/MTXStore/AddG
+RewriteOriginalBundleUrls=true
+BundleInfoUrl=http://localhost/bundles/
+BundleImageUrl=http://localhost/bundles/images/
 
 [Leaderboards]
 ;            DatabaseFile: Name of the SQLite database file to use relative to the server's Data/Leaderboards directory.
