--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -212,6 +212,8 @@ UsePrestigeLootTable=false
 ; GazillioniteBalanceForNewAccounts: The amount of Gs new accounts will get when they log in for the first time.
 ;   ESToGazillioniteConversionRatio: The amount of Gs players will get for each Eternity Splinter when converting them.
 ;    ESToGazillioniteConversionStep: Step for the Eternity Splinter amount when converting to G. Used to avoid rounding errors.
+;         GiftingOmegaLevelRequired: Minimum Omega level required to purchase gifts for other players (if Omega is enabled).
+;      GiftingInfinityLevelRequired: Minimum Infinity level required to purchase gifts for other players (if Infinity is enabled).
 ;                       HomePageUrl: URL for the page displayed on the Home tab.
 ;                 HomeBannerPageUrl: URL for the top banner displayed when the Home tab is selected.
 ;               HeroesBannerPageUrl: URL for the top banner displayed when the Heroes tab is selected.
@@ -227,6 +229,8 @@ UsePrestigeLootTable=false
 GazillioniteBalanceForNewAccounts=10000
 ESToGazillioniteConversionRatio=2.25
 ESToGazillioniteConversionStep=4
+GiftingOmegaLevelRequired=0
+GiftingInfinityLevelRequired=0
 HomePageUrl=http://localhost/store
 HomeBannerPageUrl=http://localhost/store/images/banner.png
 HeroesBannerPageUrl=http://localhost/store/images/banner.png
