--- a/src/MHServerEmu.Games/MHServerEmu.Games.csproj
+++ b/src/MHServerEmu.Games/MHServerEmu.Games.csproj
@@ -34,7 +34,7 @@
     <None Update="Data\Game\MTXStore\Catalog.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Data\Game\MTXStore\CatalogPatch.json">
+    <None Update="Data\Game\MTXStore\CatalogLimitedCostumes.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Data\Game\Achievements\AchievementContextMap.json">
@@ -53,6 +53,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Data\Game\Achievements\eng.achievements.string">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\Game\MTXStore\CatalogRestoredHeroes.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Data\Game\Patches\Off\PatchDataCarnival.json">
