Adjust default DashboardUrlPath value

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -65,7 +65,7 @@ LoginRateLimitBurst=10
 EnableWebApi=true
 EnableDashboard=true
 DashboardFileDirectory=Dashboard
-DashboardUrlPath=/
+DashboardUrlPath=/Dashboard/
 
 [PlayerManager]
 ;          EnablePersistence: Allows player data to be saved.
