Implement hidden PvP damage modifiers

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -194,6 +194,7 @@ OrbisTrophiesEnabled=true
 ;               DisableAccountBinding: Disables account binding on pickup for items.
 ;             DisableCharacterBinding: Disables character binding on equip for items.
 ;                UsePrestigeLootTable: Replaces starting costume prestige rewards with the loot table specified in game data.
+;       ApplyHiddenPvPDamageModifiers: Enables hidden damage modifiers based on K/D ratio, match history, and Omega level in PvP combat.
 
 ESCooldownOverrideMinutes=-1.0
 CombineESStacks=false
@@ -207,6 +208,7 @@ TrashedItemExpirationTimeMultiplier=1.0
 DisableAccountBinding=false
 DisableCharacterBinding=false
 UsePrestigeLootTable=false
+ApplyHiddenPvPDamageModifiers=false
 
 [MTXStore]
 ; GazillioniteBalanceForNewAccounts: The amount of Gs new accounts will get when they log in for the first time.
