Hide party and guild chat message contents from logs by default

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -115,12 +115,12 @@ PlayerName=Player
 ; ServerPrestigeLevel: Determines the color of the server's name in system messages.
 ;                      0 - white, 1 - green, 2 - blue, 3 - purple, 4 - orange, 5 - red, 6 - yellow (cosmic).
 ;            MotdText: Message of the day text.
-;            LogTells: When enabled, the text of tell (private) messages is included in server logs.
+; LogPrivateChatRooms: When enabled, the text of messages in private chat rooms (tell, party, guild) is included in server logs.
 
 ServerName=MHServerEmu
 ServerPrestigeLevel=6
 MotdText=Welcome back to Marvel Heroes! Type !commands to see a list of available server commands.
-LogTells=false
+LogPrivateChatRooms=false
 
 [GameInstance]
 ; NumWorkerThreads: The number of worker threads used to process game instances.
