Add /index.html to the default value of HomePageUrl setting

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -233,7 +233,7 @@ ESToGazillioniteConversionRatio=2.25
 ESToGazillioniteConversionStep=4
 GiftingOmegaLevelRequired=0
 GiftingInfinityLevelRequired=0
-HomePageUrl=http://localhost/store
+HomePageUrl=http://localhost/store/index.html
 HomeBannerPageUrl=http://localhost/store/images/banner.png
 HeroesBannerPageUrl=http://localhost/store/images/banner.png
 CostumesBannerPageUrl=http://localhost/store/images/banner.png
