Add /index.html to the default value of NewsUrl setting

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -84,7 +84,7 @@ UseJsonDBManager=false
 AllowClientVersionMismatch=false
 UseWhitelist=false
 ShowNewsOnLogin=false
-NewsUrl=http://localhost/news
+NewsUrl=http://localhost/news/index.html
 ServerCapacity=0
 MaxLoginQueueClients=10000
 
