Implement chat tips

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -111,16 +111,24 @@ BackupIntervalMinutes=15
 PlayerName=Player
 
 [GroupingManager]
-;          ServerName: Name in chat for system messages sent by the server.
-; ServerPrestigeLevel: Determines the color of the server's name in system messages.
-;                      0 - white, 1 - green, 2 - blue, 3 - purple, 4 - orange, 5 - red, 6 - yellow (cosmic).
-;            MotdText: Message of the day text.
-; LogPrivateChatRooms: When enabled, the text of messages in private chat rooms (tell, party, guild) is included in server logs.
+;             ServerName: Name in chat for system messages sent by the server.
+;    ServerPrestigeLevel: Determines the color of the server's name in system messages.
+;                         0 - white, 1 - green, 2 - blue, 3 - purple, 4 - orange, 5 - red, 6 - yellow (cosmic).
+;               MotdText: Message of the day text.
+;    LogPrivateChatRooms: When enabled, the text of messages in private chat rooms (tell, party, guild) is included in server logs.
+;         EnableChatTips: When enabled, the server periodically broadcasts chat tips to all players.
+;        ChatTipFileName: Name of the file in the data directory that contains chat tips.
+; ChatTipIntervalMinutes: Interval for broadcasting chat tips in minutes.
+;         ChatTipShuffle: Randomizes the order of chat tips on load.
 
 ServerName=MHServerEmu
 ServerPrestigeLevel=6
 MotdText=Welcome back to Marvel Heroes! Type !commands to see a list of available server commands.
 LogPrivateChatRooms=false
+EnableChatTips=false
+ChatTipFileName=ChatTips.txt
+ChatTipIntervalMinutes=15
+ChatTipShuffle=false
 
 [GameInstance]
 ; NumWorkerThreads: The number of worker threads used to process game instances.
