Implement Ultimate Prestige

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -202,6 +202,7 @@ OrbisTrophiesEnabled=true
 ;               DisableAccountBinding: Disables account binding on pickup for items.
 ;             DisableCharacterBinding: Disables character binding on equip for items.
 ;                UsePrestigeLootTable: Replaces starting costume prestige rewards with the loot table specified in game data.
+;              EnableUltimatePrestige: Allows prestige level to be reset after reaching the prestige level cap.
 ;       ApplyHiddenPvPDamageModifiers: Enables hidden damage modifiers based on K/D ratio, match history, and Omega level in PvP combat.
 
 ESCooldownOverrideMinutes=-1.0
@@ -216,6 +217,7 @@ TrashedItemExpirationTimeMultiplier=1.0
 DisableAccountBinding=false
 DisableCharacterBinding=false
 UsePrestigeLootTable=false
+EnableUltimatePrestige=false
 ApplyHiddenPvPDamageModifiers=false
 
 [MTXStore]
