Implement player data autosaving

--- a/src/MHServerEmu/Config.ini
+++ b/src/MHServerEmu/Config.ini
@@ -190,6 +190,7 @@ IsDifficultySliderEnabled=true
 OrbisTrophiesEnabled=true
 
 [CustomGameOptions]
+;             AutosaveIntervalMinutes: Determines the interval for saving player data when not transferring between regions. Set to <= 0 to disable autosaving.
 ;           ESCooldownOverrideMinutes: Overrides the default Eternity Splinter drop cooldown duration when the value is >= 0.
 ;                     CombineESStacks: Combine multiple Eternity Splinter stacks into a single item when they drop at the same time.
 ;                   AutoUnlockAvatars: Automatically unlocks all avatars for players who have finished the tutorial.
@@ -205,6 +206,7 @@ OrbisTrophiesEnabled=true
 ;              EnableUltimatePrestige: Allows prestige level to be reset after reaching the prestige level cap.
 ;       ApplyHiddenPvPDamageModifiers: Enables hidden damage modifiers based on K/D ratio, match history, and Omega level in PvP combat.
 
+AutosaveIntervalMinutes=15
 ESCooldownOverrideMinutes=-1.0
 CombineESStacks=false
 AutoUnlockAvatars=true
@@ -212,7 +214,7 @@ AutoUnlockTeamUps=true
 DisableMovementPowerChargeCost=false
 AllowSameGroupTalents=false
 DisableInstancedLoot=false
-LootSpawnGridCellRadius=20
+LootSpawnGridCellRadius=20.0
 TrashedItemExpirationTimeMultiplier=1.0
 DisableAccountBinding=false
 DisableCharacterBinding=false
